# duh-rust

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh  migrate-from-go.sh  uninstall.sh
.github/workflows/: ci.yml  release.yml
docs/: ssh.md
src/: git.rs  main.rs  ui.rs
src/cli/: add.rs  complete.rs  create.rs  delete.rs  describe.rs  doctor.rs  edit.rs  editor.rs  get.rs  init.rs  internal.rs  ls.rs  man.rs  mod.rs  open.rs  pkg.rs  pkgops.rs  resource.rs  rm.rs  ssh.rs  status.rs  uninstall.rs  upgrade.rs  use_pkg.rs  where_cmd.rs
src/config/: conflicts.rs  funcs.rs  gitcfg.rs  mod.rs  package.rs  paths.rs  prefs.rs
src/inject/: cache.rs  escape.rs  generator.rs  gitinc.rs  mod.rs
tests/: cli.rs
