[package]
name = "duh"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Inject your shell config (aliases, exports, functions) everywhere — fast, direnv-style"
license = "MIT"
repository = "https://github.com/Fabbbou/duh-rust"
readme = "README.md"
keywords = ["dotfiles", "shell", "aliases", "cli", "direnv"]
categories = ["command-line-utilities"]

[[bin]]
name = "duh"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2", "vendored-openssl", "https", "ssh"] }
blake3 = "1"
anyhow = "1"
dialoguer = "0.11"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
